File Structure modified

--- a/index.html
+++ b/index.html
@@ -52,35 +52,35 @@
 	<!-- index style ghcss  -->
 	<link rel="stylesheet" href="./assets/css/index.css">
 	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+	<link rel="stylesheet" href="./assets/css/bootstrap.min.css">
 	<!-- Icon -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
 		integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
-	<link rel="stylesheet" href="assets/fonts/line-icons.css">
+	<link rel="stylesheet" href="./assets/fonts/line-icons.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<!-- Owl carousel -->
-	<link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-	<link rel="stylesheet" href="assets/css/owl.theme.css">
+	<link rel="stylesheet" href="./assets/css/owl.carousel.min.css">
+	<link rel="stylesheet" href="./assets/css/owl.theme.css">
 
 	<!--Swiper JS-->
 	<link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
-	<link rel="stylesheet" href="assets/css/swipper.css">
+	<link rel="stylesheet" href="./assets/css/swipper.css">
 	<!-- Animate -->
-	<link rel="stylesheet" href="assets/css/animate.css">
+	<link rel="stylesheet" href="./assets/css/animate.css">
 	<!-- animate-on-scroll -->
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<!-- Main Style -->
-	<link rel="stylesheet" href="assets/css/blog.css">
-	<link rel="stylesheet" href="assets/css/oppurtunity.css">
-	<link rel="stylesheet" href="assets/css/main.css">
+	<link rel="stylesheet" href="./assets/css/blog.css">
+	<link rel="stylesheet" href="./assets/css/oppurtunity.css">
+	<link rel="stylesheet" href="./assets/css/main.css">
 
 	<!-- CONTACT-SECTION -->
-	<link rel="stylesheet" href="/assets/css/contactSection.css">
+	<link rel="stylesheet" href="./assets/css/contactSection.css">
 
 
 	<!-- Responsive Style -->
-	<link rel="stylesheet" href="assets/css/responsive.css">
+	<link rel="stylesheet" href="./assets/css/responsive.css">
 	<link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-png">
 
 	<!-- darkmode css -->
@@ -90,7 +90,7 @@
 	<script src="./assets/js/index.js" async defer></script>
 
 	<!-- counter imports -->
-	<script src="assets/js/jquery-min.js"></script>
+	<script src="./assets/js/jquery-min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
 	<script src="https://bfintal.github.io/Counter-Up/jquery.counterup.min.js"></script>
 	<!-- counter imports end-->
@@ -235,7 +235,7 @@
 					</div>
 					<div class="col-lg-5 col-md-12 col-sm-12 col-xs-12">
 						<div class="intro-img">
-							<img class="img-fluid" src="assets/img/Marketing-pana.png" alt="Introduction mobile picture">
+							<img class="img-fluid" src="./assets/img/Marketing-pana.png" alt="Introduction mobile picture">
 						</div>
 					</div>
 				</div>
@@ -393,7 +393,7 @@
 					</div>
 				</div>
 				<div class="col-lg-6 col-md-12 col-xs-12 wow fadeInRight" data-wow-delay="0.3s">
-					<img class="img-fluid" src="assets/img/about/Social biography-amico.png" alt="Benefits page mobile picture">
+					<img class="img-fluid" src="./assets/img/about/Social biography-amico.png" alt="Benefits page mobile picture">
 				</div>
 			</div>
 		</div>
@@ -2061,7 +2061,7 @@
 						</form>
 						</div>
 				  <div class="col-md-6 text-center">
-					  <img class="image-fluid bg-cont" src="/assets/img/Call_center-cuate.png">
+					  <img class="image-fluid bg-cont" src="./assets/img/Call_center-cuate.png">
 				  </div>
 			  </div>
 		  </div>
@@ -2292,20 +2292,20 @@
 	<!-- emailjs cdn -->
 
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<script src="assets/js/popper.min.js"></script>
-	<script src="assets/js/bootstrap.min.js"></script>
-	<script src="assets/js/owl.carousel.min.js"></script>
-	<script src="assets/js/wow.js"></script>
-	<script src="assets/js/jquery.nav.js"></script>
-	<script src="assets/js/scrolling-nav.js"></script>
-	<script src="assets/js/jquery.easing.min.js"></script>
-	<script src="assets/js/main.js"></script>
-	<script src="assets/js/form-validator.min.js"></script>
-	<script src="assets/js/contact-form-script.min.js"></script>
+	<script src="./assets/js/popper.min.js"></script>
+	<script src="./assets/js/bootstrap.min.js"></script>
+	<script src="./assets/js/owl.carousel.min.js"></script>
+	<script src="./assets/js/wow.js"></script>
+	<script src="./assets/js/jquery.nav.js"></script>
+	<script src="./assets/js/scrolling-nav.js"></script>
+	<script src="./assets/js/jquery.easing.min.js"></script>
+	<script src="./assets/js/main.js"></script>
+	<script src="./assets/js/form-validator.min.js"></script>
+	<script src="./assets/js/contact-form-script.min.js"></script>
 
 	<!--Swiper JS-->
 	<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
-	<script src="assets/js/swipper.js"></script>
+	<script src="./assets/js/swipper.js"></script>
 
 	<!-- Vanilla Tilt -->
 	<script src="./assets/vanilla-tilt/dist/vanilla-tilt.js"></script>
