--- a/assets/html/100daysofcode.html
+++ b/assets/html/100daysofcode.html
@@ -74,43 +74,43 @@
             <li class="nav-item">
 
 
-              <a class="nav-link" href="/#hero-area">
+              <a class="nav-link" href="../../index.html#hero-area">
 								Home
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/#about">
+							<a class="nav-link" href="../../index.html#about">
 								About
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/#testimonials">
+							<a class="nav-link" href="../../index.html#testimonials">
 								Team
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/#events">
+							<a class="nav-link" href="../../index.html#events">
 								Events
 							</a>
 						</li>
 						
 						<li class="nav-item mr-5">
-							<a class="nav-link" href="/#opportunity">
+							<a class="nav-link" href="../../index.html#opportunity">
 								Opportunity
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/#blog">
+							<a class="nav-link" href="../../index.html#blog">
 								Blogs
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/#community_partner">
+							<a class="nav-link" href="../../index.html#community_partner">
 								Sponsors
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/#contact">
+							<a class="nav-link" href="../../index.html#contact">
 								Contact
 							</a>
 						</li>
@@ -673,11 +673,11 @@
           <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
             <h3 class="footer-titel">Quick Links</h3>
             <ul class="footer-link">
-              <li><a href="/#hero-area">Home</a></li>
-              <li><a href="/#about">About</a></li>
-              <li><a href="/#testimonials">Team</a></li>
-              <li><a href="/#events">Events</a></li>
-              <li><a href="/#opportunity">Opportunity</a></li>
+              <li><a href="../../index.html#hero-area">Home</a></li>
+              <li><a href="../../index.html#about">About</a></li>
+              <li><a href="../../index.html#testimonials">Team</a></li>
+              <li><a href="../../index.html#events">Events</a></li>
+              <li><a href="../../index.html#opportunity">Opportunity</a></li>
             </ul>
           </div>
           <div class="col-lg-2 col-md-6 col-sm-12 col-xs-12">
