--- a/assets/html/blog.html
+++ b/assets/html/blog.html
@@ -62,27 +62,27 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto w-100 justify-content-end clearfix">
             <li class="nav-item">
-              <a class="nav-link" href="/">
+              <a class="nav-link" href="../../index.html#hero-area">
                 Home
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/#about">
+              <a class="nav-link" href="../../index.html#about">
                 About
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/#testimonials">
+              <a class="nav-link" href="../../index.html#testimonials">
                 Team
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/#events">
+              <a class="nav-link" href="../../index.html#events">
                 Events
               </a>
             </li>
             <li class="nav-item mr-5">
-              <a class="nav-link" href="/#opportunity">
+              <a class="nav-link" href="../../index.html#opportunity">
                 Opportunity
               </a>
             </li>
@@ -92,7 +92,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/#sponsors">
+              <a class="nav-link" href="../../index.html#sponsors">
                 Sponsors
               </a>
             </li>
@@ -743,11 +743,11 @@
           <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
             <h3 class="footer-titel">Quick Links</h3>
             <ul class="footer-link">
-              <li><a href="/#hero-area">Home</a></li>
-              <li><a href="/#about">About</a></li>
-              <li><a href="/#testimonials">Team</a></li>
-              <li><a href="/#events">Events</a></li>
-              <li><a href="/#opportunity">Opportunity</a></li>
+              <li><a href="../../index.html#hero-area">Home</a></li>
+              <li><a href="../../index.html#about">About</a></li>
+              <li><a href="../../index.html#testimonials">Team</a></li>
+              <li><a href="../../index.html#events">Events</a></li>
+              <li><a href="../../index.html#opportunity">Opportunity</a></li>
             </ul>
           </div>
           <div class="col-lg-2 col-md-6 col-sm-12 col-xs-12">
