--- a/assets/html/opportunity.html
+++ b/assets/html/opportunity.html
@@ -50,22 +50,22 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav mr-auto w-100 justify-content-end clearfix">
                         <li class="nav-item">
-                            <a class="nav-link" href="/">
+                            <a class="nav-link" href="../../index.html">
                                 Home
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/#about">
+                            <a class="nav-link" href="../../index.html#about">
                                 About
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/#testimonials">
+                            <a class="nav-link" href="../../index.html#testimonials">
                                 Team
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/#events">
+                            <a class="nav-link" href="../../index.html#events">
                                 Events
                             </a>
                         </li>
@@ -75,7 +75,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/#blog">
+                            <a class="nav-link" href="../../index.html#blog">
                                 Blogs
                             </a>
                         </li>
@@ -85,7 +85,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/#contact">
+                            <a class="nav-link" href="../../index.html#contact">
                                 Contact
                             </a>
                         </li>
@@ -807,11 +807,11 @@
                     <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
                         <h3 class="footer-titel">Quick Links</h3>
                         <ul class="footer-link">
-                            <li><a href="/#hero-area">Home</a></li>
-                            <li><a href="/#about">About</a></li>
-                            <li><a href="/#testimonials">Team</a></li>
-                            <li><a href="/#events">Events</a></li>
-                            <li><a href="/#opportunity">Opportunity</a></li>
+                            <li><a href="../../index.html#hero-area">Home</a></li>
+                            <li><a href="../../index.html#about">About</a></li>
+                            <li><a href="../../index.html#testimonials">Team</a></li>
+                            <li><a href="../../index.html#events">Events</a></li>
+                            <li><a href="../../index.html#opportunity">Opportunity</a></li>
                         </ul>
                     </div>
                     <div class="col-lg-2 col-md-6 col-sm-12 col-xs-12">
