--- a/index.html
+++ b/index.html
@@ -2206,6 +2206,12 @@
 									to explore the
 									untouched world of technology and Tremendous growth-making fields.</p>
 							</div>
+							<!-- Netlify deploy badge -->
+        <div class="netlify-badge-wrap" style="margin-top:20px;">
+            <a href="https://www.netlify.com">
+  			<img src="https://www.netlify.com/assets/badges/netlify-badge-color-bg.svg" alt="Deploys by Netlify" />
+			</a>
+        </div>
 
 						</div>
 					</div>
@@ -2375,6 +2381,7 @@
 						onmouseout="this.style.color='#1DA1F2'"></i></a>
 			</li>
 		</ul>
+		
 		</div>
 		<div id="copyright">
 			<div class="container">
